# silent-binary-hardening-issues-extractor

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  TESTING_REFACTOR_REPORT.md  index.html  main.py  pyproject.toml  verify_structure.py  实现思路.md
config/: config.yaml
src/: __init__.py  main.py
src/core/: analyzer.py  base_crawler.py  reporter.py
src/crawlers/: __init__.py  crawler_factory.py  lore_kernel_crawler.py
src/llm/: base_llm.py  deepseek_client.py
src/models/: issue.py
src/utils/: config_loader.py  http_client.py  playwright_client.py
tests/: conftest.py  run_tests.py
tests/fixtures/: sample_data.py
tests/integration/: test_crawler_workflow.py  test_end_to_end.py
tests/unit/: __init__.py  test_config_loader.py  test_deepseek_client.py  test_lore_kernel_crawler.py  test_models.py
